Доработал код для правильной установки вещи с владелецем